Add PingApp.Infrastructure.Default project, ready to move implement of infrastructure interfaces to this project to avoid circular dependencies

--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\PingApp.Infrastructure.Default\packages.config" />
   <repository path="..\PingApp.Infrastructure\packages.config" />
   <repository path="..\PingApp.Repository.Mongo\packages.config" />
   <repository path="..\PingApp.Schedule\packages.config" />
