--- a/src/PingApp.Infrastructure.Default/PingApp.Infrastructure.Default.csproj
+++ b/src/PingApp.Infrastructure.Default/PingApp.Infrastructure.Default.csproj
@@ -65,6 +65,8 @@
   <ItemGroup>
     <Compile Include="Dependency\InfrastructureModule.cs" />
     <Compile Include="LuceneIndexer.cs" />
+    <Compile Include="NLogAdapter.cs" />
+    <Compile Include="NLogLoggerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AppParser.cs" />
     <Compile Include="UpdateNotifier.cs" />
