Use logging fascade

--- a/src/PingApp.Schedule/App.config
+++ b/src/PingApp.Schedule/App.config
@@ -10,6 +10,7 @@
     <add key="MailAddress" value="notification@pingapp.net"/>
     <add key="MailUser" value="PingApp.net"/>
     <add key="MongoDatabase" value="pingapp"/>
+    <add key="LoggerFactory" value="PingApp.Infrastructure.Default.NLogLoggerFactory, PingApp.Infrastructure.Default"/>
   </appSettings>
   <connectionStrings>
     <add name="PingApp" connectionString="Server=localhost;User Id=root;Password=861005;Database=PingApp;Charset=utf8mb4;"/>
