--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -3,6 +3,7 @@
   <repository path="..\PingApp.Infrastructure.Default\packages.config" />
   <repository path="..\PingApp.Infrastructure\packages.config" />
   <repository path="..\PingApp.Repository.Mongo\packages.config" />
+  <repository path="..\PingApp.Schedule.Test\packages.config" />
   <repository path="..\PingApp.Schedule\packages.config" />
   <repository path="..\PingApp.Utility\packages.config" />
   <repository path="..\PingApp.Web\packages.config" />
