Migration for App and AppUpdate

--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\PingApp.Infrastructure.Default\packages.config" />
   <repository path="..\PingApp.Infrastructure\packages.config" />
+  <repository path="..\PingApp.Migration\packages.config" />
   <repository path="..\PingApp.Repository.Mongo\packages.config" />
   <repository path="..\PingApp.Schedule.Test\packages.config" />
   <repository path="..\PingApp.Schedule\packages.config" />
