Configure BSON serialization (use repository.mongo)

--- a/src/PingApp.Migration/App.config
+++ b/src/PingApp.Migration/App.config
@@ -1,5 +1,18 @@
 ﻿<?xml version="1.0"?>
 <configuration>
+  <appSettings>
+    <add key="Debug" value="True"/>
+    <add key="BatchSize" value="500"/>
+    <add key="RetryAttemptCount" value="0"/>
+    <add key="ParallelDegree" value="4"/>
+    <add key="LucentDirectory" value="E:\Database\Lucene"/>
+    <add key="ProxyAddress" value="127.0.0.1:8888"/>
+    <add key="MailAddress" value="notification@pingapp.net"/>
+    <add key="MailUser" value="PingApp.net"/>
+    <add key="MongoDatabase" value="pingapp"/>
+    <add key="LoggerFactory" value="PingApp.Infrastructure.Default.NLogLoggerFactory, PingApp.Infrastructure.Default"/>
+  </appSettings>
+  
   <connectionStrings>
     <add name="MySql" connectionString="Server=localhost;Database=PingApp;Username=root;Password=861005;Charset=utf8mb4;"/>
     <add name="Mongo" connectionString="mongodb://localhost:27017"/>
