--- a/src/PingApp.Web/Web.config
+++ b/src/PingApp.Web/Web.config
@@ -14,13 +14,13 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="Mongo" connectionString="mongodb://localhost:27017"/>
+    <add name="Mongo" connectionString="mongodb://localhost:27017" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="MongoDatabase" value="pingapp"/>
+    <add key="MongoDatabase" value="pingapp" />
     <add key="LucentDirectory" value="C:\Lucene" />
   </appSettings>
   <cachingConfiguration defaultCacheManager="Data Cache Manager">
@@ -60,24 +60,18 @@
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
     </httpModules>
-    <httpHandlers>
-      <add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" />
-    </httpHandlers>
   </system.web>
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true">
       <add name="NHibernateSessionModule" type="PingApp.Web.Infrastructures.NHibernateSessionModule, PingApp.Web" />
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
     </modules>
-    <handlers>
-      <add name="Elmah" path="elmah.axd" verb="POST,GET,HEAD" type="Elmah.ErrorLogPageFactory, Elmah" preCondition="integratedMode" />
-    </handlers>
     <security>
       <requestFiltering allowDoubleEscaping="true"></requestFiltering>
     </security>
+    <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -93,5 +87,27 @@
   </runtime>
   <elmah>
     <errorLog type="Elmah.XmlFileErrorLog, Elmah" logPath="~/Log" />
+    <security allowRemoteAccess="false" />
   </elmah>
+  <location path="elmah.axd" inheritInChildApplications="false">
+    <system.web>
+      <httpHandlers>
+        <add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" />
+      </httpHandlers>
+      <!-- 
+        See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for 
+        more information on using ASP.NET authorization securing ELMAH.
+
+      <authorization>
+        <allow roles="admin" />
+        <deny users="*" />  
+      </authorization>
+      -->
+    </system.web>
+    <system.webServer>
+      <handlers>
+        <add name="ELMAH" verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" preCondition="integratedMode" />
+      </handlers>
+    </system.webServer>
+  </location>
 </configuration>
