--- a/src/PingApp.Repository.MySql/PingApp.Repository.MySql.csproj
+++ b/src/PingApp.Repository.MySql/PingApp.Repository.MySql.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppRepository.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
