--- a/src/PingApp.Web/Web.config
+++ b/src/PingApp.Web/Web.config
@@ -83,6 +83,10 @@
         <assemblyIdentity name="Castle.Core" publicKeyToken="407dd0808d44fbdc" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.5.4.0" newVersion="6.5.4.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <elmah>
