--- a/src/PingApp.Repository.MySql/packages.config
+++ b/src/PingApp.Repository.MySql/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MySql.Data" version="6.5.4" />
+  <package id="Ninject" version="3.0.0.15" />
 </packages>
