--- a/src/PingApp.Migration/PingApp.Migration.csproj
+++ b/src/PingApp.Migration/PingApp.Migration.csproj
@@ -76,6 +76,10 @@
       <Project>{4bee7099-e9ef-4b8e-a6c4-f787949c7170}</Project>
       <Name>PingApp.Repository.Mongo</Name>
     </ProjectReference>
+    <ProjectReference Include="..\PingApp.Repository.MySql\PingApp.Repository.MySql.csproj">
+      <Project>{e05c38f1-2b9f-4f28-8106-4ca9ef3aaab2}</Project>
+      <Name>PingApp.Repository.MySql</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PingApp.Repository\PingApp.Repository.csproj">
       <Project>{65ce8a86-a790-4e23-8fc6-8d2569e86fcf}</Project>
       <Name>PingApp.Repository</Name>
