--- a/src/PingApp.Repository.MySql/PingApp.Repository.MySql.csproj
+++ b/src/PingApp.Repository.MySql/PingApp.Repository.MySql.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Dependency\MySqlRepositoryModule.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PingApp.Entity\PingApp.Entity.csproj">
