--- a/src/PingApp.Migration/App.config
+++ b/src/PingApp.Migration/App.config
@@ -14,8 +14,8 @@
   </appSettings>
   
   <connectionStrings>
-    <add name="MySql" connectionString="Server=localhost;Database=PingApp;Username=root;Password=861005;Charset=utf8mb4;"/>
-    <add name="Mongo" connectionString="mongodb://localhost:27017"/>
+    <add name="Source" connectionString="Server=localhost;Database=PingApp;Username=root;Password=123456;Charset=utf8mb4;"/>
+    <add name="Destination" connectionString="Server=localhost;Database=Dest;Username=root;Password=123456;Charset=utf8mb4;"/>
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
